# sample-tests-project

./: .env  .gitignore  README.md  pyproject.toml
src/: playwright_helpers.py
src/pages/: elements_pom.py
tests/: conftest.py  test_elements.py
